Fixed style bug for Safari 4.0.5 (issue #378)

--- a/symphony/assets/installer/main.css
+++ b/symphony/assets/installer/main.css
@@ -53,6 +53,7 @@ fieldset fieldset {
 	padding: 0 1.75em 1.5em;
 	border-top: 3.25em solid #eed;
 	background: #eed;
+	float: left;
 }
 fieldset fieldset legend {
 	padding-top: 1.5em;
