Enables expanding/collapsing fields in the section editor

--- a/symphony/assets/symphony.duplicator.css
+++ b/symphony/assets/symphony.duplicator.css
@@ -34,6 +34,9 @@
 	.duplicator.orderable > .instance > .header {
 		cursor: move;
 	}
+	.duplicator.orderable > .instance > .header span {
+		cursor: pointer;
+	}
 	.duplicator > .instance > .header .destructor {
 		font-weight: normal;
 		color: #333322;
