--- a/symphony/assets/forms.css
+++ b/symphony/assets/forms.css
@@ -141,13 +141,13 @@ div.invalid {
 }
 .invalid > label {
 	margin-bottom: 0;
-	padding: 0.75em 1.25em 1em;
+	padding: 0.75em 1em 0.75em;
 	background-color: #d42;
 	border: 1px solid #c31;
 	border-bottom-width: 0;
 }
 .invalid > p {
-	padding: 0.75em 1.25em 1em;
+	padding: 0 1em 0.75em;
 	background-color: #d42;
 	border: 1px solid #c31;
 	border-top-width: 0;
