Add missing pickable styles

--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -265,3 +265,17 @@ a.button.active {
 a.create {
 	background-color: #81b934;
 }
+
+/* Picker */
+fieldset.picker {
+	border-bottom: none;
+	margin: 0;
+}
+
+fieldset.pickable {
+	padding-top: 0;
+}
+
+fieldset.pickable legend {
+	display: none;
+}
