--- a/symphony/assets/tables.css
+++ b/symphony/assets/tables.css
@@ -18,14 +18,14 @@ td {
 	border: 1px solid #e6e6e5;
 	border-width: 1px 0;
 	padding: 0.67em 19px 0.67em 0;
-	background-color: transparent;
+	background-color: #f5f5f4;
 }
 th:first-child,
 td:first-child {
 	padding-left: 19px;
 }
-tr.odd td {
-	background-color: #f5f5f4;
+tr:nth-child(even) td {
+	background-color: transparent;
 }
 tbody a {
 	padding: 0.67em 0;
