--- a/symphony/assets/tables.css
+++ b/symphony/assets/tables.css
@@ -38,6 +38,22 @@ table.selectable input {
 	display: none;
 }
 
+/* Selecting rows */
+tr.selected td {
+	border-top: 1px solid #617dc5;
+	border-bottom: 1px solid #617dc5;
+	background-color: #5273c0;
+}
+tr:nth-child(odd).selected td {
+	border-top: 1px solid #617dc5;
+	border-bottom: 1px solid #617dc5;
+	background-color: #5677c3;
+}
+tr.selected td,
+tr.selected a {
+	color: #fff;
+}
+
 /* Ordering rows */
 tr.ordering {
 	cursor: move;
@@ -47,40 +63,28 @@ tr.ordering a {
 	color: #fff;
 }
 tr.ordering td,
-tr.odd.ordering td {
+tr:nth-child(odd).ordering td {
 	border-color: #998;
 	background-color: #887;
 	color: #fff;
 }
-table.busy td, table.selecting td {
+table.busy td {
 	border-top: 1px solid #e6e6e5;
 	border-bottom: 1px solid #e6e6e5;
 	background-color: #fff;
 }
-table.busy tr:nth-child(odd) td, table.selecting tr:nth-child(odd) td {
+table.busy tr:nth-child(odd) td {
 	border-top: 1px solid #e6e6e5;
 	border-bottom: 1px solid #e6e6e5;
 	background-color: #f5f5f4;
 }
-table.busy a, table.selecting a {
+table.busy a {
 	color: #5072bf;
 }
-
-/* Selecting rows */
-tr.selected td, table.selecting tr.selected td {
+tr.selecting td, tr:nth-child(odd).selecting td {
 	border-top: 1px solid #617dc5;
 	border-bottom: 1px solid #617dc5;
 	background-color: #5273c0;
-}
-tr:nth-child(odd).selected td, table.selecting tr:nth-child(odd).selected td {
-	border-top: 1px solid #617dc5;
-	border-bottom: 1px solid #617dc5;
-	background-color: #5677c3;
-}
-tr.selected td,
-tr.selected a,
-table.selecting tr.selected a {
-	color: #fff;
 }
 
 /* Columns */
