--- a/symphony/assets/forms.css
+++ b/symphony/assets/forms.css
@@ -1,5 +1,5 @@
-@import url("basic.css");
-@import url("admin.css");
+/*@import url("basic.css");*/
+/*@import url("admin.css");*/
 
 /* Form Elements */
 fieldset,
